Bug 489940 - Plasma crashes in PanelView::updateEnabledBorders on startup
Summary: Plasma crashes in PanelView::updateEnabledBorders on startup
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 490005 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-07-08 18:33 UTC by Jure Repinc
Modified: 2024-07-11 07:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (104.76 KB, text/plain)
2024-07-08 18:33 UTC, Jure Repinc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2024-07-08 18:33:53 UTC
Application: plasmashell (6.1.80)

Qt Version: 6.7.2
Frameworks Version: 6.4.0
Operating System: Linux 6.9.7-1-default x86_64
Windowing System: Wayland
Distribution: "openSUSE Tumbleweed"
DrKonqi: 6.1.80 [CoredumpBackend]

-- Information about the crash:
After the update and on login Plasma crashes immidiately in PanelView::updateEnabledBorders and restarts three times spawning the three crash dialogs.

Plasma comit the package is built from is 13b42d356a1f08b742ec88691acb38365393e703
The crash might have something to do with "Refactor floating panels" commit f7ee03d065b4e293746248f749a7965c4321b1cb

Operating System: openSUSE Tumbleweed 20240704
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.9.7-1-default (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 7600 6-Core Processor
Memory: 31.1 GiB of RAM
Graphics Processor: AMD Radeon RX 480 Graphics

Screen info: kscreen-doctor -o
[20::26:47.544] unknown: adding output 60
[20::26:47.544] unknown: adding output 61
[20::26:47.550] unknown: Loading Wayland backend.
Output: 1 HDMI-A-1
        enabled
        connected
        priority 1
        HDMI
        Modes:  0:3840x2160@60*!  1:4096x2160@60  2:4096x2160@60  3:4096x2160@50  4:4096x2160@30  5:4096x2160@30  6:4096x2160@25  7:4096x2160@24  8:4096x2160@24  9:3840x2160@60  10:3840x2160@60  11:3840x2160@50  12:3840x2160@30  13:3840x2160@30  14:3840x2160@25  15:3840x2160@24  16:3840x2160@24  17:1920x1200@60  18:1920x1080@60  19:1920x1080@60  20:1920x1080@60  21:1920x1080@50  22:1920x1080@30  23:1920x1080@30  24:1920x1080@25  25:1920x1080@24  26:1920x1080@24  27:1920x1080@24  28:1600x1200@60  29:1680x1050@60  30:1400x1050@60  31:1280x1024@75  32:1280x1024@60  33:1440x900@60  34:1280x960@60  35:1280x800@60  36:1152x864@75  37:1280x720@60  38:1280x720@60  39:1280x720@50  40:1024x768@75  41:1024x768@70  42:1024x768@60  43:832x624@75  44:800x600@75  45:800x600@72  46:800x600@60  47:800x600@56  48:720x576@50  49:720x576@50  50:720x480@60  51:720x480@60  52:720x480@60  53:720x480@60  54:640x480@75  55:640x480@73  56:640x480@60  57:640x480@60  58:640x480@60  59:720x400@70  60:1600x1200@60  61:1280x1024@60  62:1024x768@60  63:2560x1600@60  64:1920x1200@60  65:1280x800@60  66:3840x2160@60  67:3200x1800@60  68:2880x1620@60  69:2560x1440@60  70:1920x1080@60  71:1600x900@60  72:1368x768@60  73:1280x720@60 
        Geometry: 1120,0 1920x1080
        Scale: 2
        Rotation: 1
        Overscan: 0
        Vrr: incapable
        RgbRange: unknown
        HDR: incapable
        Wide Color Gamut: incapable
        ICC profile: none
        Color profile source: sRGB
Output: 2 DVI-D-1
        enabled
        connected
        priority 2
        DVI
        Modes:  0:1680x1050@60*!  1:1280x1024@75  2:1280x1024@60  3:1440x900@60  4:1280x960@60  5:1280x800@60  6:1152x864@75  7:1280x720@60  8:1024x768@75  9:1024x768@70  10:1024x768@60  11:832x624@75  12:800x600@75  13:800x600@72  14:800x600@60  15:800x600@56  16:640x480@75  17:640x480@73  18:640x480@67  19:640x480@60  20:720x400@70  21:1280x1024@60  22:1024x768@60  23:1280x800@60  24:1600x900@60  25:1368x768@60  26:1280x720@60 
        Geometry: 0,380 1120x700
        Scale: 1.5
        Rotation: 1
        Overscan: 0
        Vrr: incapable
        RgbRange: unknown
        HDR: incapable
        Wide Color Gamut: incapable
        ICC profile: none
        Color profile source: sRGB

The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  0x00007fbfb39e136a in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get (this=<optimized out>) at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/corelib/tools/qscopedpointer.h:112
[...]
#8  QObject::property (this=0x0, name=name@entry=0x5583b5728693 "leftShadowMargin") at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/corelib/kernel/qobject.cpp:4298
#9  0x00005583b56c8ff5 in PanelView::updateEnabledBorders (this=0x5583d56d3620) at /usr/src/debug/plasma-workspace-6.1.80git.20240707T012925~13b42d35/shell/panelview.cpp:1813
#10 0x00005583b56ca793 in PanelView::resizeEvent (this=0x5583d56d3620, ev=0x7fffdfae9410) at /usr/src/debug/plasma-workspace-6.1.80git.20240707T012925~13b42d35/shell/panelview.cpp:1003
#11 0x00007fbfb423a9f6 in QWindow::event (this=0x5583d56d3620, ev=0x7fffdfae9410) at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/gui/kernel/qwindow.cpp:2542


Reported using DrKonqi
Comment 1 Jure Repinc 2024-07-08 18:33:54 UTC
Created attachment 171484 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Noah Davis 2024-07-09 11:05:04 UTC
I am experiencing the same crash with leftShadowMargin and PanelView::updateEnabledBorders. Surprisingly, rolling back the following commits did not fix the issue for me:

- plasma-workspace: f7ee03d065b4e293746248f749a7965c4321b1cb
- plasma-desktop: 56b25d5943ebf0b8751c048fd419eccb3314956b

After rolling back, I got a different crash when I tried to run `gdb plasmashell`:

#0  0x00007ffff3d069ff in __GI___libc_write (nbytes=7, buf=0x16b2e00, fd=68) at ../sysdeps/unix/sysv/linux/write.c:26
#1  __GI___libc_write (fd=68, buf=0x16b2e00, nbytes=7) at ../sysdeps/unix/sysv/linux/write.c:24
#2  0x00007ffff67ba1f5 in DataControlSource::zwlr_data_control_source_v1_send (this=<optimized out>, mime_type=<optimized out>, fd=68)
    at /home/noah/kde/src/frameworks/kguiaddons/src/systemclipboard/waylandclipboard.cpp:354
#3  0x00007ffff67b0cdc in QtWayland::zwlr_data_control_source_v1::handle_send (data=0x1d8e170, object=<optimized out>, mime_type=0x7fffdc00f27c "text/plain;charset=utf-8", fd=68)
    at /home/noah/kde6/build/frameworks/kguiaddons/src/qwayland-wlr-data-control-unstable-v1.cpp:309
#4  0x00007ffff4a34972 in ffi_call_unix64 () at ../src/x86/unix64.S:104
#5  0x00007ffff4a312df in ffi_call_int (cif=cif@entry=0x7fffffffd080, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>, closure=closure@entry=0x0) at ../src/x86/ffi64.c:673
#6  0x00007ffff4a33f36 in ffi_call (cif=cif@entry=0x7fffffffd080, fn=<optimized out>, rvalue=rvalue@entry=0x0, avalue=avalue@entry=0x7fffffffd150) at ../src/x86/ffi64.c:710
#7  0x00007ffff7c49801 in wl_closure_invoke (closure=closure@entry=0x7fffdc00f1a0, flags=flags@entry=1, target=<optimized out>, target@entry=0x1d90f00, opcode=opcode@entry=0, data=<optimized out>)
    at ../../../kde/src/wayland/src/connection.c:1228
#8  0x00007ffff7c45bcf in dispatch_event (display=display@entry=0x5234e0, queue=queue@entry=0x5235d8) at ../../../kde/src/wayland/src/wayland-client.c:1670
#9  0x00007ffff7c46ddb in dispatch_queue (queue=0x5235d8, display=0x5234e0) at ../../../kde/src/wayland/src/wayland-client.c:1816
#10 wl_display_dispatch_queue_pending (display=0x5234e0, queue=0x5235d8) at ../../../kde/src/wayland/src/wayland-client.c:2058
#11 0x00007ffff5776c2a in QtWaylandClient::QWaylandDisplay::flushRequests (this=<optimized out>) at /usr/src/debug/qtwayland-everywhere-src-6.7.2/src/client/qwaylanddisplay.cpp:227
#12 0x00007ffff45e8161 in doActivate<false> (sender=0x520690, signal_index=4, argv=0x7fffffffd398) at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/corelib/kernel/qobject.cpp:4098
#13 0x00007ffff47c1b1b in QEventDispatcherGlib::processEvents (this=0x520690, flags=...) at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/corelib/kernel/qeventdispatcher_glib.cpp:401
#14 0x00007ffff45993db in QEventLoop::exec (this=0x7fffffffd4e0, flags=...) at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/corelib/global/qflags.h:34
#15 0x00007ffff4592bb6 in QCoreApplication::exec () at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/corelib/global/qflags.h:74
#16 0x00007ffff4fe7e2c in QGuiApplication::exec () at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/gui/kernel/qguiapplication.cpp:1926
#17 0x00007ffff6dbfff5 in QApplication::exec () at /usr/src/debug/qtbase-everywhere-src-6.7.2/src/widgets/kernel/qapplication.cpp:2555
#18 0x0000000000429ad4 in main (argc=<optimized out>, argv=<optimized out>) at /home/noah/kde/src/plasma/plasma-workspace/shell/main.cpp:188
Comment 3 Bug Janitor Service 2024-07-10 03:13:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4511
Comment 4 Marco Martin 2024-07-10 10:58:13 UTC
Git commit f758033def44ab69fd7887a9b4108ef8f9e4dfb4 by Marco Martin, on behalf of Noah Davis.
Committed on 10/07/2024 at 10:40.
Pushed by mart into branch 'master'.

PanelView: fix crash in updateEnabledBorders when rootObject is null

M  +3    -0    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f758033def44ab69fd7887a9b4108ef8f9e4dfb4
Comment 5 Duncan 2024-07-11 05:23:41 UTC
*** Bug 490005 has been marked as a duplicate of this bug. ***
Comment 6 Jure Repinc 2024-07-11 07:47:50 UTC
Just updated so the patch is included and can confirm the crash is gone for me.