PanelView: fix crash in updateEnabledBorders when rootObject is null

BUG: 489940